# platform.core.system.system-popup

./: AUTHORS  CMakeLists.txt  NOTICE
data/: org.tizen.lowbat-syspopup.desktop.in  org.tizen.lowbat-syspopup.xml  org.tizen.lowbat-syspopup.xml.in  org.tizen.lowmem-syspopup.desktop.in  org.tizen.lowmem-syspopup.xml  org.tizen.lowmem-syspopup.xml.in  org.tizen.mmc-syspopup.xml  org.tizen.mmc-syspopup.xml.in  org.tizen.poweroff-syspopup.desktop.in  org.tizen.poweroff-syspopup.xml  org.tizen.poweroff-syspopup.xml.in  org.tizen.usb-syspopup.xml  org.tizen.usb-syspopup.xml.in  org.tizen.usbotg-syspopup.xml  org.tizen.usbotg-syspopup.xml.in  org.tizen.usbotg-unmount-popup.xml
debian/: changelog  control  org.tizen.lowbat-syspopup.install.in  org.tizen.lowmem-syspopup.install.in  org.tizen.poweroff-syspopup.install.in  org.tizen.usbotg-syspopup.install.in  org.tizen.usbotg-unmount-popup.install.in  rules
edcs/: lowbatt.edc  lowmem.edc  poweroff.edc  usbotg-unmount.edc
lowbatt-popup/: CMakeLists.txt
lowbatt-popup/po_lowbatt/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  (+15 more)
lowbatt-popup/src/: CMakeLists.txt  lowbatt.c  lowbatt.h
lowmem-popup/: CMakeLists.txt
lowmem-popup/po_lowmem/: CMakeLists.txt  ar.po  az.po  bg.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  es_ES.po  es_MX.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  id.po  it_IT.po  ja_JP.po  ko_KR.po  ms.po  nl_NL.po  pl.po  pt_PT.po  ru_RU.po  sl.po  sv.po  th.po  tr_TR.po  zh_CN.po  zh_HK.po  zh_TW.po
lowmem-popup/src/: CMakeLists.txt  lowmem.c  lowmem.h
mmc-popup/: CMakeLists.txt
mmc-popup/po_mmc/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+10 more)
mmc-popup/src/: mmc.c  mmc.h
packaging/: org.tizen.lowbat-syspopup.manifest  org.tizen.lowbat-syspopup.rule  org.tizen.lowmem-syspopup.manifest  org.tizen.lowmem-syspopup.rule  org.tizen.mmc-syspopup.manifest  org.tizen.mmc-syspopup.rule  org.tizen.poweroff-syspopup.manifest  org.tizen.poweroff-syspopup.rule  org.tizen.usb-syspopup.manifest  org.tizen.usb-syspopup.rule  org.tizen.usbotg-syspopup.manifest  org.tizen.usbotg-syspopup.rule  system-apps.manifest  system-popup.changes  system-popup.spec  system-servant.spec
po/: CMakeLists.txt
po/src/: CMakeLists.txt  ar.po  az.po  bg.po  (+48 more)
popup-launcher/src/: CMakeLists.txt  app.c  launcher.c  launcher.h  noti.c  org.tizen.system.popup.service  popup.c  system-apps.rule
poweroff-popup/: CMakeLists.txt
poweroff-popup/po_poweroff/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl_NL.po  no.po  pl.po  (+17 more)
poweroff-popup/src/: CMakeLists.txt  poweroff.c  poweroff.h
share/: common.c  common.h
signal-sender/: CMakeLists.txt  org.tizen.system-signal-sender.xml  signal-sender.c  signal-sender.h
src/: CMakeLists.txt  org.tizen.system-syspopup.xml
src/battery/: battery-mobile.c  battery-wearable.c  battery-werable.c
src/common/: core.c  macro.h  popup-common-internal.h  popup-common.c  popup-common.h  popup-ui-circle.c  popup-ui-dpms-none.c  popup-ui-dpms-wayland.c  popup-ui-dpms-x.c  popup-ui-normal.c  popup-ui.c  popup-ui.h
src/cooldown/: cooldown-mobile.c  cooldown-wearable.c
src/crash/: CMakeLists.txt  crash.c  org.tizen.crash-syspopup.xml
src/launcher/: CMakeLists.txt  app.c  launcher.c  launcher.conf  launcher.h  noti.c  org.tizen.system.popup.service  popup.c  system-servant.efl
src/mmc/: mmc-mobile.c
src/overheat/: CMakeLists.txt  org.tizen.overheat-syspopup.xml  overheat-popup.edc  overheat.c  system-syspopup.edc
src/overheat/edc_resource/: popup_custom.edc
src/po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  (+23 more)
src/powerkey/: CMakeLists.txt  org.tizen.powerkey-syspopup.xml  powerkey-mobile.c  powerkey-wearable.c  powerkey.c
src/poweroff/: CMakeLists.txt  org.tizen.poweroff-syspopup.xml  poweroff.c
src/storage/: lowstorage-mobile.c  lowstorage-wearable.c
src/usb/: usb-device.c  usb-mobile.c  usbotg-mobile.c
src/watchdog/: watchdog.c
sys_device_noti/: sys_device_noti.c  sys_device_noti.h
system-cooperator/: CMakeLists.txt  system-cooperator.c
usb-popup/: CMakeLists.txt
usb-popup/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  es_ES.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  (+9 more)
usb-popup/src/: usb-syspopup.c  usb-syspopup.h
usbotg-popup/: CMakeLists.txt
usbotg-popup/po_usbotg/: CMakeLists.txt  ca.po  cs.po  de_DE.po  eu.po  hu.po  hy.po  is.po  ka.po  kk.po  ko_KR.po  lv.po  mk.po  nb.po  nl_NL.po  pt_BR.po  tr_TR.po  uk.po  uz.po  vi.po  zh_SG.po
usbotg-popup/src/: usbotg-syspopup.c  usbotg-syspopup.h  usbotg.c  usbotg.h
usbotg-unmount-popup/: CMakeLists.txt
usbotg-unmount-popup/po_usbotg_unmount/: CMakeLists.txt  es_ES.po  et.po  fi.po  fr_CA.po  he.po  lt.po  pt_PT.po  ro.po  ru_RU.po  sk.po  sr.po  zh_CN.po  zh_HK.po
usbotg-unmount-popup/src/: usbotg-unmount.c  usbotg-unmount.h
(+3 files in other folders)
