CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(${PKGNAME} C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(SMACK_DIR "${TZ_SYS_SMACK}/accesses.d")
SET(LICENSE_DIR "${TZ_SYS_SHARE}/license")
SET(DBUS_SERVICE_DIR "${TZ_SYS_SHARE}/dbus-1/system-services")
SET(LOCALE_DIR "${TZ_SYS_SHARE}/locale")
SET(LANG_DOMAIN "${PKGNAME}")

ADD_DEFINITIONS("-DPKGNAME=\"${PKGNAME}\"")
ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALE_DIR}\"")
ADD_DEFINITIONS("-DLANG_DOMAIN=\"${LANG_DOMAIN}\"")
ADD_DEFINITIONS("-DPROFILE=\"${PROFILE}\"")

ADD_SUBDIRECTORY(src/launcher)
ADD_SUBDIRECTORY(src/po)
