CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(${PKGNAME} C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(LICENSE_DIR "${TZ_SYS_RO_SHARE}/license")
SET(DBUS_SERVICE_DIR "${TZ_SYS_RO_SHARE}/dbus-1/system-services")
SET(LOCALE_DIR "${TZ_SYS_RO_SHARE}/locale")
SET(LANG_DOMAIN "${PKGNAME}")

ADD_DEFINITIONS("-DPKGNAME=\"${PKGNAME}\"")
ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALE_DIR}\"")
ADD_DEFINITIONS("-DLANG_DOMAIN=\"${LANG_DOMAIN}\"")
ADD_DEFINITIONS("-DPROFILE=\"${PROFILE}\"")

SET(COMMON_DIR "${CMAKE_SOURCE_DIR}/src/common")
SET(COMMON_SRCS
		${COMMON_DIR}/core.c
		${COMMON_DIR}/popup-common.c
		${COMMON_DIR}/popup-ui.c
		${COMMON_DIR}/popup-ui-normal.c
)

# DPMS
IF("${DPMS}" STREQUAL "x")
SET(COMMON_SRCS ${COMMON_SRCS}
		${COMMON_DIR}/popup-ui-dpms-x.c)
ELSEIF("${DPMS}" STREQUAL "wayland")
SET(COMMON_SRCS ${COMMON_SRCS}
		${COMMON_DIR}/popup-ui-dpms-wayland.c)
ELSE()
SET(COMMON_SRCS ${COMMON_SRCS}
		${COMMON_DIR}/popup-ui-dpms-none.c)
ENDIF()


ADD_SUBDIRECTORY(src/launcher)
ADD_SUBDIRECTORY(src/po)
ADD_SUBDIRECTORY(src/poweroff)
