CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(${PKGNAME} C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(SYSTEM_RESDIR "${PREFIX}/share/system-apps/res")
SET(SYSTEM_ICONDIR "${SYSTEM_RESDIR}/icons")
SET(LICENSE_DIR "${TZ_SYS_RO_SHARE}/license")
SET(DBUS_SERVICE_DIR "${TZ_SYS_RO_SHARE}/dbus-1/system-services")
SET(LOCALE_DIR "${TZ_SYS_RO_SHARE}/locale")
SET(LANG_DOMAIN "${PKGNAME}")

ADD_DEFINITIONS("-DPKGNAME=\"${PKGNAME}\"")
ADD_DEFINITIONS("-DLOCALE_DIR=\"${LOCALE_DIR}\"")
ADD_DEFINITIONS("-DLANG_DOMAIN=\"${LANG_DOMAIN}\"")
ADD_DEFINITIONS("-DSYSTEM_ICONDIR=\"${SYSTEM_ICONDIR}\"")
ADD_DEFINITIONS("-DPROFILE=\"${PROFILE}\"")
ADD_DEFINITIONS("-DFORMFACTOR=\"${FORMFACTOR}\"")

IF(PROFILE STREQUAL mobile)
	OPTION(PROFILE_MOBILE "Mobile device" ON)
ENDIF()
IF(PROFILE STREQUAL wearable)
	OPTION(PROFILE_WEARABLE "Wearable device" ON)
ENDIF()
IF(PROFILE STREQUAL tv)
	OPTION(PROFILE_TV "TV device" ON)
ENDIF()

SET(COMMON_DIR "${CMAKE_SOURCE_DIR}/src/common")
SET(COMMON_SRCS
		${COMMON_DIR}/core.c
		${COMMON_DIR}/popup-common.c
		${COMMON_DIR}/popup-ui.c
		${COMMON_DIR}/popup-ui-normal.c
)

IF("${FORMFACTOR}" STREQUAL "circle")
	SET(COMMON_SRCS ${COMMON_SRCS}
			${COMMON_DIR}/popup-ui-circle.c)
ELSE()
	SET(COMMON_SRCS ${COMMON_SRCS}
			${COMMON_DIR}/popup-ui-normal.c)
ENDIF()


# DPMS
IF("${DPMS}" STREQUAL "x")
SET(COMMON_SRCS ${COMMON_SRCS}
		${COMMON_DIR}/popup-ui-dpms-x.c)
ELSEIF("${DPMS}" STREQUAL "wayland")
SET(COMMON_SRCS ${COMMON_SRCS}
		${COMMON_DIR}/popup-ui-dpms-wayland.c)
ELSE()
SET(COMMON_SRCS ${COMMON_SRCS}
		${COMMON_DIR}/popup-ui-dpms-none.c)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/powerkey)
ADD_SUBDIRECTORY(src/crash)
ADD_SUBDIRECTORY(src/launcher)
ADD_SUBDIRECTORY(src/po)
ADD_SUBDIRECTORY(signal-sender)