CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(SIGNAL_SENDER STREQUAL off)
	RETURN()
ENDIF(SIGNAL_SENDER STREQUAL off)

SET(SIGNAL-SENDER_SRCS ${CMAKE_SOURCE_DIR}/signal-sender/signal-sender.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${COMMON_DIR})

SET(VENDOR "tizen")
SET(PACKAGE "system-signal-sender")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(PREFIX "${CMAKE_INSTALL_PREFIX}/apps/${PKGNAME}")
SET(BINDIR "${PREFIX}/bin")
SET(MANIFESTDIR "${CMAKE_INSTALL_PREFIX}/share/packages")

SET(PKG_MODULES
		appcore-efl
		edbus
		bundle
		dlog
		elementary
		aul
)

INCLUDE(FindPkgConfig)
pkg_check_modules(signal-sender_pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${signal-sender_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -g -Wall -fPIE")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")

ADD_EXECUTABLE(${PACKAGE} ${SIGNAL-SENDER_SRCS})
TARGET_LINK_LIBRARIES(${PACKAGE} ${signal-sender_pkgs_LDFLAGS} "-ldl")

INSTALL(TARGETS ${PACKAGE} DESTINATION ${BINDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/signal-sender/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})
