####### System-popup #############
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(SYSTEM_POPUP STREQUAL off)
	RETURN()
ENDIF()

SET(TABLE_PATH ${CMAKE_SOURCE_DIR}/edcs/table)

#common module
SET(SRCS ${COMMON_SRCS})

IF(WATCHDOG_POPUP STREQUAL on)
	SET(SRCS ${SRCS} watchdog/watchdog.c)
ENDIF()

IF(BATTERY_POPUP STREQUAL on)
	IF(PROFILE_WEARABLE)
		SET(SRCS ${SRCS} battery/battery-wearable.c)
	ENDIF()
	IF (PROFILE_MOBILE)
		SET(SRCS ${SRCS} battery/battery-mobile.c)
	ENDIF()
ENDIF(BATTERY_POPUP STREQUAL on)

IF(STORAGE_POPUP STREQUAL on)
	IF(PROFILE_WEARABLE)
		SET(SRCS ${SRCS} storage/lowstorage-wearable.c)
	ENDIF()

	IF(PROFILE_MOBILE)
		SET(SRCS ${SRCS} storage/lowstorage-mobile.c)
	ENDIF() 
ENDIF(STORAGE_POPUP STREQUAL on)

IF(COOLDOWN_POPUP STREQUAL on)
	IF(PROFILE_WEARABLE)
		SET(SRCS ${SRCS} cooldown/cooldown-wearable.c)
	ENDIF()
	IF(PROFILE_MOBILE)
		SET(SRCS ${SRCS} cooldown/cooldown-mobile.c)
	ENDIF()
ENDIF(COOLDOWN_POPUP STREQUAL on)

IF(MMC_POPUP STREQUAL on)
	IF(PROFILE_MOBILE)
		SET(SRCS ${SRCS} mmc/mmc-mobile.c)
	ENDIF()
ENDIF(MMC_POPUP STREQUAL on)

IF(USB_POPUP STREQUAL on)
	IF(PROFILE_MOBILE)
		SET(SRCS ${SRCS} usb/usb-mobile.c
						 usb/usbotg-mobile.c
						 usb/usb-device.c)
	ENDIF()
ENDIF(USB_POPUP STREQUAL on)

IF(OVERHEAT_POPUP STREQUAL on)
	IF(PROFILE_MOBILE)
		SET(SRCS ${SRCS} overheat/overheat.c)
	ENDIF()
ENDIF(OVERHEAT_POPUP STREQUAL on)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/common)

SET(VENDOR "tizen")
SET(PACKAGE "system-syspopup")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(PREFIX "${CMAKE_INSTALL_PREFIX}/apps/${PKGNAME}")
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(MANIFESTDIR "${CMAKE_INSTALL_PREFIX}/share/packages")
IF(OVERHEAT_POPUP STREQUAL on)
	SET(OVERHEAT_RES "${TZ_SYS_RO_APP}/${PKGNAME}/shared/res")
ENDIF(OVERHEAT_POPUP STREQUAL on)

SET(PKG_MODULES
		appcore-efl
		bundle
		dlog
		ecore
		evas
		syspopup
		vconf
		elementary
		deviced
		feedback
		efl-extension
		appsvc
		edbus
		capi-appfw-application
)

INCLUDE(FindPkgConfig)
pkg_check_modules(system_pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${system_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -O2 -g -Wall -fpie")

ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DOVERHEAT_RES=\"${OVERHEAT_RES}\"")
ADD_DEFINITIONS("-DELM_OVERHEAT_EDC=\"${OVERHEAT_RES}/${PACKAGE}.edj\"")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

ADD_EXECUTABLE(${PACKAGE} ${SRCS})

TARGET_LINK_LIBRARIES(${PACKAGE} syspopup ${system_pkgs_LDFLAGS})

INSTALL(TARGETS ${PACKAGE} DESTINATION ${BINDIR})

IF(OVERHEAT_POPUP STREQUAL on)
	ADD_CUSTOM_TARGET(${PACKAGE}.edj
		COMMAND edje_cc -no-save ${CMAKE_SOURCE_DIR}/src/overheat/${PACKAGE}.edc ${CMAKE_BINARY_DIR}/${PACKAGE}.edj
		DEPENDS ${CMAKE_SOURCE_DIR}/src/overheat/${PACKAGE}.edc
		COMMENT "making edj file"
	)
	ADD_DEPENDENCIES(${PACKAGE} ${PACKAGE}.edj)
	INSTALL(FILES ${CMAKE_BINARY_DIR}/${PACKAGE}.edj DESTINATION ${OVERHEAT_RES})
ENDIF(OVERHEAT_POPUP STREQUAL on)

# install manifest file
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})
############## END ##############
