CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(lowbatt-popup C)

SET(PACKAGE ${PROJECT_NAME})
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(SRCS ${CMAKE_SOURCE_DIR}/lowbatt-popup/src/lowbatt.c
		 ${CMAKE_SOURCE_DIR}/share/src/common.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lowbatt-popup/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/share/src)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
		appcore-efl
		elementary
		deviced
		dlog
		svi
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag} -g")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g ")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

ADD_EXECUTABLE(${PACKAGE} ${SRCS})
TARGET_LINK_LIBRARIES(${PACKAGE} ${pkgs_LDFLAGS} "-lsvi")
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/data/org.tizen.lowbat-syspopup.xml.in ${CMAKE_SOURCE_DIR}/data/org.tizen.lowbat-syspopup.xml)
INSTALL(TARGETS ${PACKAGE} DESTINATION ${TZ_SYS_RO_APP}/org.tizen.lowbat-syspopup/bin)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/org.tizen.lowbat-syspopup.xml DESTINATION ${TZ_SYS_RO_PACKAGES})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.lowbat-syspopup.rule DESTINATION ${TZ_SYS_SMACK}/accesses.d)


